--- a/discord-bot/Cargo.toml
+++ b/discord-bot/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 serenity = "0.12.4"
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 rustble = {path = "../rustble"}
+rand = "0.9.0"
