--- a/discord-bot/Cargo.toml
+++ b/discord-bot/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 serenity = "0.12.4"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
+tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
 rustble = {path = "../rustble"}
 rand = "0.9.0"
