--- a/discord-bot/Cargo.toml
+++ b/discord-bot/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 serenity = "0.12.4"
-sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
+cassandra-cpp = "3.0.2"
 tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
 rustble = {path = "../rustble"}
 rand = "0.9.0"
+itertools = "0.14.0"
